# gl-pathtracing

./: .gitignore  CMakeLists.txt
Compute/: CMakeLists.txt  ComputeShader.glsl  main.h
cmake/: FindGLFW.cmake
